--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -439,7 +439,7 @@
                                                             <label class="lblExpense label-small-3">ต้นทุน(Manpower and Tool Cost)</label>
                                                         </li>
                                                         <li>
-                                                            <input type="text" id="txtExpense" name="field6" class="text-size130 txtdisablerow" disabled />
+                                                            <input type="text" id="txtExpense" name="field6" class="text-size130 txtdisablerow" value="0" disabled />
                                                         </li>
                                                         <li>
                                                             <label class="lblProfit label-small-6">กำไร</label>
