--- a/Alpha/AlphaMvc/Reports/RptJobOrder.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptJobOrder.rdlc
@@ -2738,7 +2738,7 @@
           </Paragraph>
         </Paragraphs>
         <rd:DefaultName>Textbox1</rd:DefaultName>
-        <Top>10.14583in</Top>
+        <Top>10.39583in</Top>
         <Height>0.125in</Height>
         <Width>6.98085in</Width>
         <ZIndex>21</ZIndex>
@@ -3366,8 +3366,41 @@
           <PaddingBottom>2pt</PaddingBottom>
         </Style>
       </Textbox>
+      <Textbox Name="Textbox17">
+        <CanGrow>true</CanGrow>
+        <KeepTogether>true</KeepTogether>
+        <Paragraphs>
+          <Paragraph>
+            <TextRuns>
+              <TextRun>
+                <Value>ISO (F-ARS-03-Rev.00 (28 July 2015))</Value>
+                <Style>
+                  <FontFamily>cordia New</FontFamily>
+                  <FontSize>11pt</FontSize>
+                </Style>
+              </TextRun>
+            </TextRuns>
+            <Style />
+          </Paragraph>
+        </Paragraphs>
+        <rd:DefaultName>Textbox17</rd:DefaultName>
+        <Top>25.77013cm</Top>
+        <Left>12.12704cm</Left>
+        <Height>0.6cm</Height>
+        <Width>4.8cm</Width>
+        <ZIndex>41</ZIndex>
+        <Style>
+          <Border>
+            <Style>None</Style>
+          </Border>
+          <PaddingLeft>2pt</PaddingLeft>
+          <PaddingRight>2pt</PaddingRight>
+          <PaddingTop>2pt</PaddingTop>
+          <PaddingBottom>2pt</PaddingBottom>
+        </Style>
+      </Textbox>
     </ReportItems>
-    <Height>26.14083cm</Height>
+    <Height>26.72291cm</Height>
     <Style>
       <Border>
         <Style>None</Style>
